syntax = "proto3";

option go_package = "pb";

service DomainEvents {
  rpc InsertDomainEvent (InsertDomainEventRequest) returns (InsertDomainEventResponse) {}
  rpc Scan(stream ScanRequest) returns (stream ScanResponse) {}
}

message InsertDomainEventRequest {
  string type = 1;
  bytes data = 2;
}

message InsertDomainEventResponse {}

message ScanRequest {
  oneof command {
    ScanRequestResume resumeCommand = 1;
    ScanRequestStatus statusCommand = 2;
  }
}

message ScanRequestResume {
  uint32 pointer = 1;
}

message ScanRequestStatus {
  int64 lastReceived = 1;
}

message ScanResponse {
  oneof command {
    ScanResponseDomainEvent event = 1;
    ScanResponseComplete complete = 2;
  }
}

message ScanResponseComplete {}

message ScanResponseDomainEvent {
  int64 id = 1;
  bytes data = 2;
  int64 date = 3;
  string type = 4;
}